<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KES</string>
    <string name="kes">Keyless Entry System</string>
    <string name="register"><u>Register</u></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in"><u>Sign in</u></string>
    <string name="action_settings">Settings</string>

    <string name="dash">Dashboard</string>

</resources>
