<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="15dp"
    android:paddingLeft="15dp"
    android:background="#C0C0C0"
    tools:context=".LoginActivity">

    <TextView
        android:text="@string/kes"
        android:textSize="23sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="25dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ProgressBar
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:layout_gravity="end"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
